src/App.css
body {
  margin: 0;
  background-color: lightgray;
}

h1 {
  text-align: center;
  font-size: 60px;
  font-style: italic;
  color: #ffcb05; /* Pokémon yellow */
  text-shadow:
    -2px -2px 0 #2a75bb,
    2px -2px 0 #2a75bb,
    -2px 2px 0 #2a75bb,
    2px 2px 0 #2a75bb; /* blue outline */
}

.button {
  font-size: 16px;
  padding: 8px 16px;
  cursor: pointer;
  border: 2px solid black;
  background-color: white;
  border-radius: 20%;
  transition: background-color 0.2s ease;
}

.button:hover {
  background-color: #d3d3d3;
}

.card {
  border: 1px solid black;
  width: "260px";
  font-family: "Trebuchet MS", Arial, sans-serif;
  border-radius: 10%;
}

.card img {
  width: 120px;
  height: 120px;
  object-fit: contain;
}

.card h2 {
  font-size: 28px;
  margin-bottom: 8px;
}

.card p {
  font-size: 18px;
  margin: 6px 0;
}

.card button {
  position: absolute;
  top: 5px;
  right: 2px;

  border: none;
  background: transparent;
  cursor: pointer;
  font-size: 20px;
}

.card.grass {
  background-color: #d8f3dc;
}

.card.fire {
  background-color: #ffd6a5;
}

.card.water {
  background-color: #caf0f8;
}

.card.electric {
  background-color: #fff3b0;
}

.card.psychic {
  background-color: #f1c0e8;
}

.card.normal {
  background-color: #e9ecef;
}

.card.ghost {
  background-color: #d0bfff;
}

.card.dragon {
  background-color: #cdb4db;
}

.card.fighting {
  background-color: #f8d7da;
}

.card.rock {
  background-color: #ddd3c3;
}

